--- a/Project.toml
+++ b/Project.toml
@@ -8,6 +8,9 @@ Brillouin = "23470ee3-d0df-4052-8b1a-8cbd6363e7f0"
 Crystalline = "ae5e2be0-a263-11e9-351e-f94dad1eb351"
 Cubature = "667455a9-e2ce-5579-9412-b964f529a492"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+Parameters = "d96e819e-fc66-5662-9728-84c9c7592b0a"
 QuadGK = "1fd47b50-473d-5c70-9696-f719f8f3bcdc"
 Roots = "f2b01f46-fcfa-551c-844a-d8ac1e96c665"
+SpinFRGLattices = "053fb7f8-31b7-4f68-aef8-4452b415dd8c"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
+Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
